Version 1.17

  * Deprecate configure option --enable-download.
    This option will be removed in the future. If this option is really
    needed for now, the new option --enable-deprecated-download will
    behave just the same but serves as a reminder to change the
    build process.


Version 1.16

  Tue Sep 27 18:06:30 CEST 2016

  * Updated translations:
    cmp.1, diff.1, diff3.1, info.1, ncal.1, sdiff.1, adjtimex.2,
    mmap.2, mount.2, open.2, personality.2, sigreturn.2, sync.2,
    assert.3, readdir.3, setjmp.3, console_ioctl.4, hosts.equiv.5,
    nfs.5, proc.5, agetty.8, blkid.8, hwclock.8, raw.8, rtcwake.8


Version 1.15

  Sat Aug 27 08:13:17 CEST 2016

  * Updated translations:
    fallocate.1, find.1, getopt.1, tar.1, taskset.1, unshare.1,
    access.2, cacheflush.2, execve.2, fcntl.2, fork.2, mmap.2, mount.2,
    open.2, sigaction.2, socketcall.2, stat.2, statfs.2, sync.2,
    umask.2, clearenv.3, getdate.3, gethostbyname.3, memcpy.3,
    strcasecmp.3, tzset.3, console_ioctl.4, nfs.5, proc.5, ascii.7,
    locale.7, blkdiscard.8, blkid.8, cfdisk.8, hwclock.8, lilo.8,
    raw.8, sfdisk.8, systemd-journald.service.8,
    systemd-sysctl.service.8


Version 1.14

  Fri Aug 5 22:21:51 CEST 2016

  * New translations:
    iso_8859-10.7, iso_8859-11.7, iso_8859-13.7, iso_8859-14.7,
    iso_8859-16.7, iso_8859-9.7
  * Updated translations:
    find.1, free.1, getopt.1, groff.1, intro.1, ipcs.1, sed.1,
    unshare.1, wodim.1, accept.2, access.2, acct.2, adjtimex.2,
    alarm.2, bdflush.2, bind.2, brk.2, cacheflush.2, capget.2, chdir.2,
    chmod.2, chown.2, chroot.2, clone.2, close.2, connect.2, dup.2,
    execve.2, _exit.2, fcntl.2, flock.2, fork.2, fsync.2, getdents.2,
    getdomainname.2, getgid.2, getgroups.2, gethostname.2, getitimer.2,
    getpagesize.2, getpeername.2, getpid.2, getresuid.2, getsid.2,
    getsockname.2, getuid.2, idle.2, intro.2, ioctl.2, ioctl_list.2,
    ioperm.2, iopl.2, ipc.2, killpg.2, link.2, listen.2, lseek.2,