@@ -22,19 +22,27 @@ translation="$manpage".po
 addendum="$manpage".add
 section=`basename "$manpage" | sed -e "s/.\+\.//"`
 
-# Try to locate original manpage
+# Try to locate original manpage in the english directory.
 original=$top_srcdir/english/man$section/$manpage
-# If the original is not there, try using the system wide installation
-if [ ! -f "$original" ]; then
-	original=/usr/share/man/man$section/$manpage
-fi
-# Try a gzip compressed version
+
+# Try to locate original manpage from system-wide installation
+# The order to try is gzip, bzip2, xz, uncompressed
 if [ ! -f "$original" ]; then
 	original=/usr/share/man/man$section/$manpage.gz
 	if [ -f "$original" ]; then
 		# The manpage exists, but needs to be decompressed
 		uncompressed_manpage=`mktemp`
 		gzip -d -c "$original" > "$uncompressed_manpage"
+		original="$uncompressed_manpage"
+	fi
+fi
+# Try a bzip2 compressed version
+if [ ! -f "$original" ]; then
+	original=/usr/share/man/man$section/$manpage.bz2
+	if [ -f "$original" ]; then
+		# The manpage exists, but needs to be decompressed
+		uncompressed_manpage=`mktemp`
+		bzip2 -d -c "$original" > "$uncompressed_manpage"
 		original="$uncompressed_manpage"
 	fi
 fi
@@ -48,6 +56,11 @@ if [ ! -f "$original" ]; then
 		original="$uncompressed_manpage"
 	fi
 fi
+# Try an uncompressed version
+if [ ! -f "$original" ]; then
+	original=/usr/share/man/man$section/$manpage
+fi
+
 # Cannot generate manpage if the original could not be found
 if [ ! -f "$original" ]; then
 	echo "The original manpage for $manpage could not be found." >&2
