@@ -5,6 +5,9 @@ Version 1.17
     needed for now, the new option --enable-deprecated-download will
     behave just the same but serves as a reminder to change the
     build process.
+  * Include bzip2 compressed manpages in the search for the original.
+    Also reorder the compression methods to search for. The order
+    is now gzip, bzip2, xz, uncompressed.
 
 
 Version 1.16
